tests/fail/grid_sort_cross_type.msh
[| x; "a"; 1; "b" |] "x" sortBy
